--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
