--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
+    "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "start": "node ./src/server.js",
+    "start": "node ./dist/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
