--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "start": "nodemon ./src/server.ts",
+    "docker-compose up -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
