--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
+DATABASE_URL="postgresql://postgres:123@localhost:5432/postgres?schema=public"
 API_PORT="3333"
+POSTGRES_PASSWORD="123"
+JWT_SECRET="secret keys"
