--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "generate": "prisma generate",
     "start": "nodemon ./src/server.ts",
     "db:up": "docker-compose up -d",
     "test": "echo \"Error: no test specified\" && exit 1"
